--- a/django/static/servers.css
+++ b/django/static/servers.css
@@ -9,12 +9,12 @@
 }
 
 .svr-main-div {
-    position:absolute;
+    /*position:absolute;*/
     height: 650px;
-    top:50%;
-    left: 50%;
-    margin-top: -325px;
-    margin-left: -400px;
+    /*top:50%;*/
+    /*left: 50%;*/
+    /*margin-top: -325px;*/
+    /*margin-left: -400px;*/
 }
 
 .svr-display-div {
