--- a/django/static/ipaddr.css
+++ b/django/static/ipaddr.css
@@ -1,9 +1,3 @@
-/*#ip-div-main {*/
-    /*position:absolute;*/
-    /*width: 800px;*/
-    /*height: 650px;*/
-    /*top:50%;*/
-    /*left: 50%;*/
-    /*margin-top: -325px;*/
-    /*margin-left: -400px;*/
-/*}*/
+.ip-add-parts {
+    margin: 10px 0px 0px 25px;
+}
