--- a/django/static/project.css
+++ b/django/static/project.css
@@ -1,3 +1,8 @@
 .pro-add-parts {
     margin: 10px 0px 0px 25px;
 }
+
+.pro-rel-man{
+    font:9pt/9pt "Microsoft YaHei";
+    text-decoration: none;
+}
